During match field view with buttons

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
   --background-secondary: #323232;
   --primary: #5B7FC5;
   --secondary: #696969;
+  --success: #82ec7a;
+  --warning: #f7b955;
+  --error: #f77070;
   --text: #FFFFFF;
   --text-secondary: #979797;
 
