--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,25 @@
   color: var(--text-secondary);
 }
 
+.glow-primary {
+  --glow-shadow: var(--primary);
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+.glow-warning {
+  --glow-shadow: var(--warning);
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    box-shadow: 0px 0px 10px 0px var(--glow-shadow);
+  }
+  to {
+    box-shadow: 0px 0px 35px 0px var(--glow-shadow);
+  }
+}
+
 .material-symbols-outlined {
   font-family: 'Material Icons Outlined';
   font-weight: normal;
