--- a/src/index.css
+++ b/src/index.css
@@ -87,8 +87,13 @@
   white-space: nowrap;
   word-wrap: normal;
   direction: ltr;
+  font-feature-settings: "liga";
   -moz-font-feature-settings: 'liga';
   -moz-osx-font-smoothing: grayscale;
+}
+
+.inline-icon {
+  vertical-align: bottom;
 }
 
 /* material-icons-outlined-regular - latin */
@@ -152,5 +157,6 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 input[type=number] {
+  appearance: textfield;
   -moz-appearance: textfield;
 }
